--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "api.js",
+  "engines": {
+    "node":"18"
+  },
   "dependencies": {
     "abort-controller": "^3.0.0",
     "agent-base": "^6.0.2",
@@ -96,6 +99,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
