--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "./api.js",
+    "start": ".node api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
