--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "api.js",
   "engines": {
-    "node":"18"
+    "node":"18.x"
   },
   "dependencies": {
     "abort-controller": "^3.0.0",
@@ -99,7 +99,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": ".node api.js",
+    "start": "node api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
