--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "api.js",
   "engines": {
-    "node":"14.x"
+    "node": "14.x"
   },
   "dependencies": {
+    "@vercel/edge-config": "^0.4.1",
     "abort-controller": "^3.0.0",
     "agent-base": "^6.0.2",
     "arrify": "^2.0.1",
@@ -97,7 +98,6 @@
     "yallist": "^4.0.0",
     "yauzl": "^2.10.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
