--- a/package.json
+++ b/package.json
@@ -1,105 +1,9 @@
 {
-  "name": "api",
+  "name": "apiws",
   "version": "1.0.0",
   "description": "",
   "main": "api.js",
-  "engines": {
-    "node": "14.x"
-  },
-  "dependencies": {
-    "@vercel/edge-config": "^0.4.1",
-    "abort-controller": "^3.0.0",
-    "agent-base": "^6.0.2",
-    "arrify": "^2.0.1",
-    "axios": "^0.21.4",
-    "balanced-match": "^1.0.2",
-    "base64-js": "^1.5.1",
-    "bignumber.js": "^9.1.0",
-    "bl": "^4.1.0",
-    "brace-expansion": "^1.1.11",
-    "buffer": "^5.7.1",
-    "buffer-crc32": "^0.2.13",
-    "buffer-equal-constant-time": "^1.0.1",
-    "buffer-writer": "^2.0.0",
-    "chownr": "^1.1.4",
-    "concat-map": "^0.0.1",
-    "cross-fetch": "^3.1.5",
-    "debug": "^4.3.4",
-    "devtools-protocol": "^0.0.1036444",
-    "ecdsa-sig-formatter": "^1.0.11",
-    "end-of-stream": "^1.4.4",
-    "event-target-shim": "^5.0.1",
-    "extend": "^3.0.2",
-    "extract-zip": "^2.0.1",
-    "fast-text-encoding": "^1.0.6",
-    "fd-slicer": "^1.1.0",
-    "follow-redirects": "^1.15.2",
-    "fs-constants": "^1.0.0",
-    "fs.realpath": "^1.0.0",
-    "gaxios": "^4.3.3",
-    "gcp-metadata": "^4.3.1",
-    "get-stream": "^5.2.0",
-    "glob": "^7.2.3",
-    "google-auth-library": "^6.1.6",
-    "google-p12-pem": "^3.1.4",
-    "google-spreadsheet": "^3.3.0",
-    "gtoken": "^5.3.2",
-    "https-proxy-agent": "^5.0.1",
-    "ieee754": "^1.2.1",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "is-stream": "^2.0.1",
-    "json-bigint": "^1.0.0",
-    "jwa": "^2.0.0",
-    "jws": "^4.0.0",
-    "lodash": "^4.17.21",
-    "lru-cache": "^6.0.0",
-    "minimatch": "^3.1.2",
-    "mkdirp-classic": "^0.5.3",
-    "ms": "^2.1.3",
-    "node-fetch": "^2.6.7",
-    "node-forge": "^1.3.1",
-    "once": "^1.4.0",
-    "packet-reader": "^1.0.0",
-    "path-is-absolute": "^1.0.1",
-    "pend": "^1.2.0",
-    "pg": "^8.11.3",
-    "pg-cloudflare": "^1.1.1",
-    "pg-connection-string": "^2.6.2",
-    "pg-int8": "^1.0.1",
-    "pg-pool": "^3.6.1",
-    "pg-protocol": "^1.6.0",
-    "pg-types": "^2.2.0",
-    "pgpass": "^1.0.5",
-    "postgres-array": "^2.0.0",
-    "postgres-bytea": "^1.0.0",
-    "postgres-date": "^1.0.7",
-    "postgres-interval": "^1.2.0",
-    "progress": "^2.0.3",
-    "proxy-from-env": "^1.1.0",
-    "pump": "^3.0.0",
-    "puppeteer": "^18.0.5",
-    "readable-stream": "^3.6.0",
-    "rimraf": "^3.0.2",
-    "safe-buffer": "^5.2.1",
-    "split2": "^4.2.0",
-    "string_decoder": "^1.3.0",
-    "tar-fs": "^2.1.1",
-    "tar-stream": "^2.2.0",
-    "through": "^2.3.8",
-    "tr46": "^0.0.3",
-    "unbzip2-stream": "^1.4.3",
-    "util-deprecate": "^1.0.2",
-    "webidl-conversions": "^3.0.1",
-    "whatwg-url": "^5.0.0",
-    "wrappy": "^1.0.2",
-    "ws": "^8.9.0",
-    "xtend": "^4.0.2",
-    "yallist": "^4.0.0",
-    "yauzl": "^2.10.0"
-  },
   "scripts": {
-    "start": "api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
